tests/spec/parse/snapshots/impl_simple.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Counter {
    value: int,
  }
  
  impl Counter {
    fn get(self: Counter) -> int {
      return self.value;
    }
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Counter",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 7,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "value",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 20,
                        byte_length: 5,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 27,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 32,
        },
    },
    ImplBlock {
        annotation: Constructor {
            name: "Counter",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 40,
                byte_length: 7,
            },
        },
        receiver_name: "Counter",
        methods: [
            Function {
                doc: None,
                attributes: [],
                name: "get",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 55,
                    byte_length: 3,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "self",
                            span: Span {
                                file_id: 0,
                                byte_offset: 59,
                                byte_length: 4,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "Counter",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 65,
                                    byte_length: 7,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 77,
                        byte_length: 3,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: DotAccess {
                                    expression: Identifier {
                                        value: "self",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 94,
                                            byte_length: 4,
                                        },
                                        resolution: Unresolved,
                                    },
                                    member: "value",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 94,
                                        byte_length: 10,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 87,
                                    byte_length: 17,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 81,
                            byte_length: 28,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 52,
                    byte_length: 57,
                },
            },
        ],
        generics: [],
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 35,
            byte_length: 76,
        },
    },
]
