tests/spec/parse/snapshots/impl_static_method.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Math {}
  
  impl Math {
    fn add(a: int, b: int) -> int {
      return a + b;
    }
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Math",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 4,
        },
        generics: [],
        fields: Record(
            [],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 14,
        },
    },
    ImplBlock {
        annotation: Constructor {
            name: "Math",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 22,
                byte_length: 4,
            },
        },
        receiver_name: "Math",
        methods: [
            Function {
                doc: None,
                attributes: [],
                name: "add",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 34,
                    byte_length: 3,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "a",
                            span: Span {
                                file_id: 0,
                                byte_offset: 38,
                                byte_length: 1,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 41,
                                    byte_length: 3,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                    Binding {
                        pattern: Identifier {
                            identifier: "b",
                            span: Span {
                                file_id: 0,
                                byte_offset: 46,
                                byte_length: 1,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 49,
                                    byte_length: 3,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 57,
                        byte_length: 3,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: Binary {
                                    operator: Addition,
                                    left: Identifier {
                                        value: "a",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 74,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    right: Identifier {
                                        value: "b",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 78,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 74,
                                        byte_length: 5,
                                    },
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 67,
                                    byte_length: 12,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 61,
                            byte_length: 23,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 31,
                    byte_length: 53,
                },
            },
        ],
        generics: [],
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 17,
            byte_length: 69,
        },
    },
]
