tests/spec/parse/snapshots/import_basic.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  import "my_package"
---
[
    PackageImport {
        name: "my_package",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 12,
        },
        alias: None,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 19,
        },
    },
]
