tests/spec/parse/snapshots/import_blank.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  import _ "go:database/sql"
---
[
    PackageImport {
        name: "go:database/sql",
        name_span: Span {
            file_id: 0,
            byte_offset: 10,
            byte_length: 17,
        },
        alias: Some(
            Blank(
                Span {
                    file_id: 0,
                    byte_offset: 8,
                    byte_length: 1,
                },
            ),
        ),
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 26,
        },
    },
]
