tests/spec/parse/snapshots/import_go_stdlib.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  import "go:fmt"
---
[
    PackageImport {
        name: "go:fmt",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 8,
        },
        alias: None,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 15,
        },
    },
]
