tests/spec/parse/snapshots/import_mixed_with_function.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  import "go:io"
  import "network"
  
  fn process() {
    // function body
  }
  
  import "logging"
---
[
    PackageImport {
        name: "go:io",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 7,
        },
        alias: None,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 14,
        },
    },
    PackageImport {
        name: "network",
        name_span: Span {
            file_id: 0,
            byte_offset: 23,
            byte_length: 9,
        },
        alias: None,
        span: Span {
            file_id: 0,
            byte_offset: 16,
            byte_length: 16,
        },
    },
    Function {
        doc: None,
        attributes: [],
        name: "process",
        name_span: Span {
            file_id: 0,
            byte_offset: 37,
            byte_length: 7,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 47,
                    byte_length: 22,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 34,
            byte_length: 35,
        },
    },
    PackageImport {
        name: "logging",
        name_span: Span {
            file_id: 0,
            byte_offset: 78,
            byte_length: 9,
        },
        alias: None,
        span: Span {
            file_id: 0,
            byte_offset: 71,
            byte_length: 16,
        },
    },
]
